Assignment Day 2
Python 3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> print("30 days 30 hour challenge")
30 days 30 hour challenge
>>> print('30 days 30 hour challenge')
30 days 30 hour challenge
>>> Hours = "thirty"
>>> print(Hours)
thirty
>>> Hours = "thirty"
>>> >>> print(Hours)
  File "<stdin>", line 1
    >>> print(Hours)
    ^
SyntaxError: invalid syntax
>>> Hours="thirty"
>>> print(Hours)
thirty
>>> Days="Thirty days"
>>> print(Days[0])
T
>>> Days="Thirty days"
>>> print(Days[30])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: string index out of range
>>> Challenge="I will win"
>>> print(Challenge[7.10])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: string indices must be integers
>>> Challenge="I will win"
>>> print(len(Challenge))
10
>>> Challenge="I will win"
>>> print(Challenge.lower())
i will win
>>> a = "30 Days"
>>> b = "30 hours"
>>> c = a + b
>>> print(c)
30 Days30 hours
>>> a = "30 Days"
>>> b = "30 hours"
>>> c = a + " " + b
>>> print(c)
30 Days 30 hours
>>> text="Thirty days and Thirty hours"
>>> x=text.casefold()
>>> print(x)
thirty days and thirty hours
>>> text="Thirty days and Thirty hours"
>>> x=text.capitalize()
>>> print(x)
Thirty days and thirty hours
>>> text="Thirty days and Thirty hours"
>>> x=text.find("i")
>>> print(x)
2
>>> text="Thirty days and Thirty hours"
>>> x=text.isalpha()
>>> print(x)
False
>>> text="Thirty days and Thirty hours"
>>> x=text.isalnum()
>>> print(x)
False
